--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://confidenceiskey.github.io/robofriends/",
+  "homepage": "https://confidenceiskey.github.io/robofriends-redux/",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
