--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "robofriends",
+  "name": "robofriends-redux",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://confidenceiskey.github.io/robofriends-redux/",
