--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,12 @@
   "description": "A React App that searches through Robot users using redux for state management",
   "icons": [
     {
-      "src": "/android-chrome-192x192.png",
+      "src": "/robofriends-redux/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android-chrome-256x256.png",
+      "src": "/robofriends-redux/android-chrome-256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     }
